# lsb-shop

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTEXT.md  DEVELOPMENT.md  LICENSE  README.md  pyrightconfig.json  release-please-config.json
.github/: dependabot.yml
backend/: .env.example  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  release.sh  start-celery-beat-dev.ps1  start-celery-dev.ps1
backend/apps/cart/: constants.py  guest_cookie.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/cart/tests/: conftest.py  test_services.py  test_views.py
backend/apps/core/: admin.py  cloudinary_utils.py  exceptions.py  health.py  middleware.py  models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/core/migrations/: 0001_storesettings.py  0002_add_type_to_presetsize.py
backend/apps/core/tests/: test_error_fingerprint_middleware.py  test_health.py  test_loadtesting_locustfile.py  test_permissions.py  test_services.py  test_views.py
backend/apps/favorites/: admin.py  apps.py  filters.py  models.py  permissions.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/favorites/migrations/: 0001_initial.py
backend/apps/favorites/tests/: factories.py  test_services.py  test_views.py
backend/apps/orders/: admin.py  admin_urls.py  constants.py  list_filters.py  mailers.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/orders/migrations/: 0001_initial.py  0002_order_card_brand_last4.py  0003_orderitem_compare_at_unit_minor_snapshot.py
backend/apps/orders/tests/: conftest.py  factories.py  test_demo_admin_orders.py  test_expire_cancel.py  test_mailers.py  test_order_payment_intent.py  test_services.py  test_services_returns.py  test_tasks_payment.py  test_views.py  test_views_list.py  test_views_retrieve.py
backend/apps/payments/: urls.py  views.py
backend/apps/payments/tests/: test_stripe_webhook.py
backend/apps/products/: admin.py  color_matching.py  filters.py  models.py  permissions.py  product_list_cache.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py  0002_slug_partial_unique.py  0003_phase3_store_and_catalog.py  0004_add_type_to_presetsize.py
backend/apps/products/tests/: conftest.py  factories.py  test_color_matching.py  test_demo_permissions.py  test_has_zero_stock_filter.py  test_serializers.py  test_services.py  test_views.py
backend/apps/users/: adapters.py  admin.py  apps.py  constants.py  email_templates.py  managers.py  models.py  permissions.py  privacy.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_user_phone.py  0003_useraddress.py
backend/apps/users/tests/: conftest.py  factories.py  fixtures.py  test_addresses.py  test_email_templates.py  test_ensure_demo_staff_command.py  test_ensure_portfolio_demo_command.py  test_models.py  test_privacy.py  test_services.py  test_views.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  development.py  production.py  test.py
backend/loadtesting/: locustfile.py
(+414 files in other folders)
